[gd_scene load_steps=2 format=3 uid="uid://your_uid_here"]

[ext_resource type="Script" path="res://scripts/stock_management.gd" id="1_stock"]

[node name="InventoryPanel" type="PanelContainer"]
custom_minimum_size = Vector2(300, 0)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_stock")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="Header" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "Inventory Management"
horizontal_alignment = 1

[node name="TeaList" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 12

[node name="HeaderRow" type="HBoxContainer" parent="MarginContainer/VBoxContainer/TeaList"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="TeaHeader" type="Label" parent="MarginContainer/VBoxContainer/TeaList/HeaderRow"]
layout_mode = 2
size_flags_horizontal = 3
text = "Tea"

[node name="CostHeader" type="Label" parent="MarginContainer/VBoxContainer/TeaList/HeaderRow"]
layout_mode = 2
size_flags_horizontal = 3
text = "Cost"
horizontal_alignment = 1

[node name="StockHeader" type="Label" parent="MarginContainer/VBoxContainer/TeaList/HeaderRow"]
layout_mode = 2
size_flags_horizontal = 3
text = "Stock"
horizontal_alignment = 1

[node name="BuyHeader" type="Label" parent="MarginContainer/VBoxContainer/TeaList/HeaderRow"]
layout_mode = 2
size_flags_horizontal = 3
text = "Buy"
horizontal_alignment = 1

[node name="TotalCost" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/TotalCost"]
layout_mode = 2
size_flags_horizontal = 3
text = "Total Cost:"

[node name="Amount" type="Label" parent="MarginContainer/VBoxContainer/TotalCost"]
layout_mode = 2
text = "Â£0.00"
horizontal_alignment = 2

[node name="RestockButton" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Restock"

[node name="LowStockWarning" type="Label" parent="MarginContainer/VBoxContainer"]
visible = false
layout_mode = 2
theme_override_colors/font_color = Color(0.92, 0.3, 0.3, 1)
text = "Low stock warning!"
horizontal_alignment = 1